formatting of floating-nav-trigger

--- a/resume.html
+++ b/resume.html
@@ -22,10 +22,7 @@
     <body itemscope itemtype="http://schema.org/Person">
         <div class="container-fluid">
             <div class="row main clearfix">
-                <a href="#" class="js-floating-nav-trigger floating-nav-trigger">
-                <i class="fa fa-bars"></i>
-                <span class="close-icon">&times;</span>
-                </a>
+                <a href="#" class="js-floating-nav-trigger floating-nav-trigger"><i class="fa fa-bars"></i><span class="close-icon">&times;</span></a>
                 <nav class="floating-nav js-floating-nav">
                     <ul class="list-unstyled">
                         <li>
