updates to other.js, more formatting

--- a/resume.html
+++ b/resume.html
@@ -13,7 +13,9 @@
         <link rel="icon" href="img/favicon.ico" type="image/x-icon">
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.12.0/moment.min.js"></script>
-        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react.js"></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react-dom.js"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/tooltip.js"></script>
         <script type="text/javascript" src="js/readable-range.js"></script>
         <script type="text/javascript" src="js/resume.json.js"></script>
@@ -26,34 +28,19 @@
                 <nav class="floating-nav js-floating-nav">
                     <ul class="list-unstyled">
                         <li>
-                            <a href="#about">
-                            <i class="fa fa-user"></i>
-                            About
-                            </a>
+                            <a href="#about"><i class="fa fa-user"></i>About</a>
                         </li>
                         <li>
-                            <a href="#work-experience">
-                            <i class="fa fa-building"></i>
-                            Work Experience
-                            </a>
+                            <a href="#work-experience"><i class="fa fa-building"></i>Work Experience</a>
                         </li>
                         <li>
-                            <a href="#skills">
-                            <i class="fa fa-code"></i>
-                            Skills
-                            </a>
+                            <a href="#skills"><i class="fa fa-code"></i>Skills</a>
                         </li>
                         <li>
-                            <a href="#education">
-                            <i class="fa fa-mortar-board"></i>
-                            Education
-                            </a>
+                            <a href="#education"><i class="fa fa-mortar-board"></i>Education</a>
                         </li>
                         <li>
-                            <a href="#interests">
-                            <i class="fa fa-heart"></i>
-                            Interests
-                            </a>
+                            <a href="#interests"><i class="fa fa-heart"></i>Interests</a>
                         </li>
                     </ul>
                 </nav>
