--- a/resume.html
+++ b/resume.html
@@ -24,7 +24,9 @@
     <body itemscope itemtype="http://schema.org/Person">
         <div class="container-fluid">
             <div class="row main clearfix">
-                <a href="#" class="js-floating-nav-trigger floating-nav-trigger"><i class="fa fa-bars"></i><span class="close-icon">&times;</span></a>
+                <a href="#" class="js-floating-nav-trigger floating-nav-trigger">
+                    <i class="fa fa-bars"></i><span class="close-icon">&times;</span>
+                </a>
                 <nav class="floating-nav js-floating-nav">
                     <ul class="list-unstyled">
                         <li>
@@ -106,7 +108,7 @@
                         </div>
                     </div>
                 </section>
-                <section class="col-md-9 card-wrapper pull-right">
+                <section class="col-md-9 card-wrapper content-card-wrapper pull-right">
                     <div class="card background-card">
                         <h4 class="text-uppercase text-bolder">Background</h4>
                         <hr>
